--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build",
-    "test": "ng test",
+    "build": "ng build --prod",
+    "test": "ng test --source-map false",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "server": "node node_modules/ngf-server/server.js"
