--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
+    "start": "node node_modules/ngf-server/server.js",
     "build": "ng build --prod",
     "test": "ng test --source-map false",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "server": "node node_modules/ngf-server/server.js"
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
